# mini_middleware

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/include/bench/: bench_args.h  message_codec.h  stats.h
bench/src/: bench_args.cpp  main.cpp  message_codec.cpp  stats.cpp
cli/: CMakeLists.txt
cli/include/cli/: args.h  message_format.h  topic_commands.h
cli/src/: args.cpp  main.cpp  message_format.cpp  topic_commands.cpp
common/: CMakeLists.txt
common/include/common/: blocking_queue.h  host_id.h  logger.h  qos.h
common/src/: host_id.cpp
config/: CMakeLists.txt
config/include/config/: config.h
config/src/: config.cpp
core/: CMakeLists.txt
core/include/core/: client.h  data_plane.h  local_bus.h  node.h  publisher.h  remote_sink.h  rpc_topics.h  service.h  shm_limits.h  shm_reader.h  shm_sink.h  subscriber.h
core/src/: data_plane.cpp  local_bus.cpp  node.cpp  shm_reader.cpp
discovery/: CMakeLists.txt
discovery/include/discovery/: discovery_agent.h  endpoint_matcher.h  udp_multicast.h
discovery/src/: discovery_agent.cpp  endpoint_matcher.cpp  udp_multicast.cpp
docs/superpowers/plans/: 2026-06-15-phase1-core-abstractions.md  2026-06-15-phase2-discovery.md  2026-06-17-phase3-tcp-data-plane.md  2026-06-18-phase4-shm.md  2026-06-18-phase5-qos.md  2026-06-24-phase6-rpc.md  2026-06-24-phase7-cli-config.md  2026-06-26-phase8-benchmark-docs.md
docs/superpowers/specs/: 2026-06-15-mini-middleware-roadmap.md  2026-06-15-phase1-core-abstractions-design.md  2026-06-15-phase2-discovery-design.md  2026-06-17-phase3-tcp-data-plane-design.md  2026-06-18-phase4-shm-design.md  2026-06-18-phase5-qos-design.md  2026-06-24-phase6-rpc-design.md  2026-06-24-phase7-cli-config-design.md  2026-06-26-phase8-benchmark-docs-design.md
examples/: CMakeLists.txt  discovery_demo.cpp  intra_process_demo.cpp  publisher_demo.cpp  qos_demo.cpp  queue_test.cpp  rpc_demo.cpp  shm_pubsub_demo.cpp  subscriber_demo.cpp  tcp_client_demo.cpp  tcp_pubsub_demo.cpp  tcp_server_demo.cpp
proto/: CMakeLists.txt  data.proto  discovery.proto  messages.proto  rpc.proto
tests/: CMakeLists.txt  test_bench_args.cpp  test_bench_message_codec.cpp  test_bench_stats.cpp  test_blocking_queue_capacity.cpp  test_cli_args.cpp  test_cli_topic_echo.cpp  test_cli_topic_hz.cpp  test_cli_topic_list.cpp  test_client.py  test_config_defaults.cpp  test_config_errors.cpp  test_config_parse.cpp  test_data_message.cpp  test_data_plane.cpp  test_discovery_agent.cpp  test_discovery_proto.cpp  test_discovery_snapshot.cpp  test_endpoint_matcher.cpp  test_frame_codec.cpp  test_host_id.cpp  test_local_bus.cpp  test_message_format.cpp  test_node.cpp  test_node_discovery.cpp  test_publisher.cpp  test_qos.cpp  test_qos_match.cpp  test_qos_pubsub.cpp  test_qos_routing.cpp  test_remote_sink.cpp  test_rpc_local.cpp  test_rpc_proto.cpp  test_rpc_pubsub.cpp  test_rpc_timeout.cpp  test_rpc_topics.cpp  test_shm_pubsub.cpp  test_shm_ring.cpp  test_shm_segment.cpp  test_shm_sink_reader.cpp  (+4 more)
transport/: CMakeLists.txt
transport/include/transport/: frame_codec.h  shm_ring.h  shm_segment.h  tcp_client_transport.h  tcp_server_transport.h  transport.h
transport/src/: frame_codec.cpp  shm_segment.cpp  tcp_client_transport.cpp  tcp_server_transport.cpp
